[tool.poetry]
name = "lissom"
version = "0.1.0"
description = "Self-organizing map framework for Python"
authors = ["Michael Blaß <mblass@posteo.net>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"


[tool.poetry.group.development.dependencies]
pylint = "^2.15.5"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
