[tool.poetry]
name = "blossom"
version = "0.1.0"
description = "Self-organizing map framework for Python"
authors = ["Michael Blaß <mblass@posteo.net>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.1"


[tool.poetry.group.development.dependencies]
pylint = "^2.15.5"
mypy = "^0.982"
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["i", "j", "k", "t", "x", "y", "_", "ax", "ix", "iy"]
